* Round the ticks
* Add used ram in percent
* Fix one variable
* Round the kdr