@@ -2,6 +2,7 @@ package com.github.games647.scoreboardstats.scoreboard;
 
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import net.minecraft.server.v1_5_R3.Packet206SetScoreboardObjective;
 import org.apache.commons.lang.Validate;
 import org.bukkit.scoreboard.DisplaySlot;
 
@@ -9,10 +10,10 @@ public final class SObjective {
 
     private DisplaySlot displayslot;
 
-    private final   String      objectivename; //Should be only under 16 characters
-    private         String      displayname; //Can me under 32 characters long
-
+    private final String objectivename; //Should be only under 16 characters
+    private String displayname; //Can me under 32 characters long
     private int disabled; // 0 to create the scoreboard. 1 to remove the scoreboard. 2 to update the display text. TODO: Check these values
+
     private final Map<String, SScore> scores = new ConcurrentHashMap<String, SScore>(10); // Never should be more than 15
 
     public SObjective(final DisplaySlot displayslot, final String objectivename, final String displayname) {
@@ -20,9 +21,9 @@ public final class SObjective {
         Validate.isTrue(objectivename.length() > 16, "The objective name can't be longer than 16 characters.");
         Validate.isTrue(displayname.length() > 32, "The display name can't be longer than 32 characters.");
 
-        this.displayslot    = displayslot;
-        this.objectivename  = objectivename;
-        this.displayname    = displayname;
+        this.displayslot = displayslot;
+        this.objectivename = objectivename;
+        this.displayname = displayname;
     }
 
     public DisplaySlot getDisplayslot() {
@@ -45,5 +46,24 @@ public final class SObjective {
     public void setDisplayname(final String displayname) {
         Validate.isTrue(displayname.length() > 32, "The display name can't be longer than 32 characters.");
         this.displayname = displayname;
+    }
+
+    public void setDisabled() {
+        final Packet206SetScoreboardObjective packet = new Packet206SetScoreboardObjective();
+
+        packet.a = objectivename;
+        packet.c = 1;
+
+        disabled = 1;
+    }
+
+    public void setEnabled() {
+        final Packet206SetScoreboardObjective packet = new Packet206SetScoreboardObjective();
+
+        packet.a = objectivename;
+        packet.b = ""; //To let the packet small
+        packet.c = 0;
+
+        disabled = 0;
     }
 }
