@@ -10,7 +10,7 @@ public final class Message  {
     //Log-Messages
     public static final String LOG_NAME              = '[' + Other.PLUGIN_NAME + "] ";
     public static final String NON_EXISTING_DATABASE = "Can't find an existing Database, so creating a new one";
-    public static final String LONGER_THAN_LIMIT     = "%s is longer than the limit of 16 characters. This Plugin will cut automatically to the right size.";
+    public static final String LONGER_THAN_LIMIT     = "%s is longer than the limit of %s characters. This Plugin will cut automatically to the right size.";
     public static final String SET_SCOREBOARD_FAIL   = "Cannot set the Scoreboard because the player has disconnected";
     public static final String TOO_LONG_LIST         = "One Scoreboard can't have more than 15 items";
 
